# vcalc-dialect

./: CMakeLists.txt  README.md
include/VCalc/: CMakeLists.txt
lib/: CMakeLists.txt
lib/VCalc/: CMakeLists.txt  VCalcDialect.cpp  VCalcOps.cpp
standalone-opt/: CMakeLists.txt  standalone-opt.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Standalone/: dummy.mlir
